--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@
 	height: auto;
 }
 
+.parallax { 
+    background-image: url("../img/header.png");
+    height: 500px; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .icons1
 {	
