--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,52 @@
 	width: auto;
 	margin: auto;
 }
+
+
+
+
+
+
+/* FOOTER STYLE */
+.site-footer
+{
+	background-color: #303843;
+	color: white;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+.bottom-footer
+{
+	border-top: 1px solid #b2b2b2;
+	margin-top:10px;
+	padding-top: 10px;
+	color: #b2b2b2;
+}
+
+.footer-nav
+{
+	text-align: right;
+	list-style: none;
+}
+
+.footer-nav li
+{
+	display: inline;
+}
+
+.footer-nav li:not(:first-child):before
+{
+	content: '|';
+	padding: 0px 10px;
+}
+
+.footer-nav a
+{
+	color: #b2b2b2;
+}
+
+.footer-nav a:hover
+{
+	color: white;
+}
