--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
 
 .jumbotron
 {
-	background-image: url("../img/header.png");
+	background-image: url("../img/header.jpg");
 	height: 750px; 
     background-attachment: fixed;
     background-position: center;
