--- a/css/animations.css
+++ b/css/animations.css
@@ -34,6 +34,64 @@
   }
 }
 
+@-webkit-keyframes fadeInRight {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInRight {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(20%, 0, 0);
+    transform: translate3d(20%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@-webkit-keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-20%, 0, 0);
+    transform: translate3d(-20%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+
+
 
 /*TRIGGERS */
 
@@ -61,10 +119,53 @@
 
 .totrigger3{
   opacity: 0  ;
-
 }
 
 .totrigger3.zoomIn {
+  opacity: 1;
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  animation-duration: 2s;
+}
+
+.totrigger4 {
+  opacity: 0  ;
+}
+
+.totrigger4.fadeInRight {
+  opacity: 1;
+  -webkit-animation-name: fadeInRight;
+  animation-name: fadeInRight;
+  animation-duration: 2s;
+}
+
+.totrigger5 {
+  opacity: 0  ;
+}
+
+.totrigger5.fadeInLeft {
+  opacity: 1;
+  -webkit-animation-name: fadeInLeft;
+  animation-name: fadeInLeft;
+  animation-duration: 2s;
+}
+
+.totrigger6{
+  opacity: 0  ;
+}
+
+.totrigger6.zoomIn {
+  opacity: 1;
+  -webkit-animation-name: zoomIn;
+  animation-name: zoomIn;
+  animation-duration: 2s;
+}
+
+.totrigger7{
+  opacity: 0  ;
+}
+
+.totrigger7.zoomIn {
   opacity: 1;
   -webkit-animation-name: zoomIn;
   animation-name: zoomIn;
